# cmorse

./: .gitignore  CMakeLists.txt  README.md  blackman.c  blackman.h  main.c  midi.c  midi.h  morse.c  morse.h  serial.c  serial.h
arduino/MIDI-Morse-Micro/: MIDI-Morse.ino  button.cpp  button.h
arduino/MIDI_Morse_Teensy/: MIDI_Morse_Teensy.ino  button.cpp  button.h  name.c
